Companies card wokring and bugs fixed

--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,7 @@
   padding: 16px !important;
   color: white !important;
 }
+.embed-responsive-item{
+  margin-top: 20px;
+  margin-left: 152px;
+}
